fixed spacing errors

--- a/app/assets/stylesheets/api/reservation/reservation_form.scss
+++ b/app/assets/stylesheets/api/reservation/reservation_form.scss
@@ -52,7 +52,7 @@
     border: 1px solid #d8d9db;
     font-size: 1rem;
     line-height: 1.5;
-    width: 15rem;
+    width: 17rem;
     font-weight: 500;
     border-radius: 3px;
     display: inline-block;
